--- a/src/main/resources/application.queries.properties
+++ b/src/main/resources/application.queries.properties
@@ -10,7 +10,7 @@ empleados = SELECT * FROM empleado
 empleado = SELECT * FROM empleado WHERE id_empleado = ?
 deleteEmpleado = DELETE FROM empleado WHERE id_empleado = ?
 insertEmpleado = INSERT INTO empleado (apellido, nombre, titulo, titulo_de_cortesia, fecha_nacimiento, fecha_contratacion, telefono_casa, extension, foto, notas, reporta_a_empleado, path_foto, id_region, email) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
-
+updateEmpleado = UPDATE empleado SET apellido = ?, nombre = ?, titulo = ?, titulo_de_cortesia = ?, fecha_nacimiento = ?, fecha_contratacion = ?, telefono_casa = ?, extension = ?, foto = ?, notas = ?, reporta_a_empleado = ?, path_foto = ?, id_region = ?, email = ? WHERE empleado_id = ?
 
 #queries para tabla Region
 region = SELECT * FROM region WHERE id_region = ?
